<?xml version="1.0"?>
<package>
  <name>cartesian_trajectories</name>
  <version>0.0.0</version>
  <description>Cartesian paths for testing presicion.</description>


  <maintainer email="moicez@gmail.com">Moises Estrada</maintainer>


  <license>TODO</license>


  
  <buildtool_depend>catkin</buildtool_depend>
	
	<build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>roscpp</build_depend>
  


  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>roscpp</run_depend>


  <export>

  </export>
</package>
