<?xml version="1.0"?>
<package>
  <name>paint_app</name>
  <version>0.0.0</version>
  <description>The paint_app package</description>

  <maintainer email="moicez@gmail.com">Moises Estrada</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
	
	<build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>

  <export>

  </export>
</package>
